Bug 736944 - make nsDocAccessible::RecreateAccessible fall into usual ContentInserted/ContentRemoved procedure, r=tbsaunde